Initial port to 1.18